atualizando css para QA

--- a/assets/css/style_inPage.css
+++ b/assets/css/style_inPage.css
@@ -52,8 +52,7 @@ text-decoration: none;
   color: #ffffff;
 }
 .AZ_Section002{
-  background-image: url(    https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/Section02Destiny.png
-  );
+  background-image: url(https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/Gramado.jpg);
   background-size: cover;
   background-position: 50% 20%;
   background-repeat: no-repeat;
