--- a/assets/css/style_inPage.css
+++ b/assets/css/style_inPage.css
@@ -379,6 +379,9 @@ margin: 10px 10px;
   .md-padding-40{
     padding: 40px;
   }
+  .md-padding-20{
+    padding: 20px;
+  }
   .md-margin-top-0{
     margin-top: 0px;
   } 
@@ -426,11 +429,11 @@ margin: 10px 10px;
     padding-right: 0px;
   }
   .md-max-width-450{
-max-width: 450px;
+    max-width: 450px;
   }
   .mb-max-width-350{
     max-width: 350px;
-      }
+  }
   .margin-15-0{
     margin: 15px 0px;
   }
