atualizando css com o QA

--- a/assets/css/style_inPage.css
+++ b/assets/css/style_inPage.css
@@ -12,7 +12,7 @@ text-decoration: none;
   opacity: 0.6 !important;
 }
 .kv{
-  background-image: url(https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/kv.png);
+  background-image: url(https://tudoazul.voeazul.com.br/documents/26002/763575/kv.png);
   background-size: cover;
   background-position: 50% 20%;
   background-repeat: no-repeat;
@@ -52,7 +52,7 @@ text-decoration: none;
   color: #ffffff;
 }
 .AZ_Section002{
-  background-image: url(https://nicholasoliveira.github.io/AzulViagens-RC19/assets/img/Gramado.jpg);
+  background-image: url(https://tudoazul.voeazul.com.br/documents/26002/763575/Gramado.jpg);
   background-size: cover;
   background-position: 50% 20%;
   background-repeat: no-repeat;
