atualizando com restante das páginas

--- a/assets/css/style_inPage.css
+++ b/assets/css/style_inPage.css
@@ -2,14 +2,22 @@ body{
   background-color: #ffffff !important;
   font-family: Helvetica, sans-serif;
 }
+.linkDstv{
+  color: #6d6e71;
+  cursor: inherit !important;
+}
+.linkDstv:hover{
+  color: #6d6e71 !important;
+}
 .ReturnC19 a{
 text-decoration: none;
+border-radius: 0px 20px 20px 0px;
 }
 .ReturnC19 a:hover{
   text-decoration: none;
   transition: 0.5s;
   color: inherit !important;
-  opacity: 0.6 !important;
+  opacity: 1 !important;
 }
 .kv{
   background-image: url(https://tudoazul.voeazul.com.br/documents/26002/763575/kv.png);
@@ -52,7 +60,28 @@ text-decoration: none;
   color: #ffffff;
 }
 .AZ_Section002{
-  background-image: url(https://tudoazul.voeazul.com.br/documents/26002/763575/Gramado.jpg);
+  background-image: url(http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/Gramado.jpg);
+  background-size: cover;
+  background-position: 50% 20%;
+  background-repeat: no-repeat;
+  min-height: 800px;
+}
+.AZ_Section002_FOZ{
+  background-image: url(http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/FozBck.png);
+  background-size: cover;
+  background-position: 50% 20%;
+  background-repeat: no-repeat;
+  min-height: 800px;
+}
+.AZ_Section002_NATAL{
+  background-image: url(http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/NatalBck.png);
+  background-size: cover;
+  background-position: 50% 20%;
+  background-repeat: no-repeat;
+  min-height: 800px;
+}
+.AZ_Section002_PORTOGALINHAS{
+  background-image: url(http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/PortoGalinhasBck.png);
   background-size: cover;
   background-position: 50% 20%;
   background-repeat: no-repeat;
