atualizando com restante das páginas

--- a/assets/css/style_inPage.css
+++ b/assets/css/style_inPage.css
@@ -60,28 +60,28 @@ border-radius: 0px 20px 20px 0px;
   color: #ffffff;
 }
 .AZ_Section002{
-  background-image: url(http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/Gramado.jpg);
+  background-image: url(https://tudoazul.voeazul.com.br/documents/26002/763575/Gramado.jpg);
   background-size: cover;
   background-position: 50% 20%;
   background-repeat: no-repeat;
   min-height: 800px;
 }
 .AZ_Section002_FOZ{
-  background-image: url(http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/FozBck.png);
+  background-image: url(https://tudoazul.voeazul.com.br/documents/26002/763575/FozBck.png);
   background-size: cover;
   background-position: 50% 20%;
   background-repeat: no-repeat;
   min-height: 800px;
 }
 .AZ_Section002_NATAL{
-  background-image: url(http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/NatalBck.png);
+  background-image: url(https://tudoazul.voeazul.com.br/documents/26002/763575/NatalBck.png);
   background-size: cover;
   background-position: 50% 20%;
   background-repeat: no-repeat;
   min-height: 800px;
 }
 .AZ_Section002_PORTOGALINHAS{
-  background-image: url(http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/assets/img/PortoGalinhasBck.png);
+  background-image: url(https://tudoazul.voeazul.com.br/documents/26002/763575/PortoGalinhasBck.png);
   background-size: cover;
   background-position: 50% 20%;
   background-repeat: no-repeat;
